--- a/specification/confidentialledger/data-plane/Microsoft.CodeTransparency/preview/2025-01-31-preview/examples/GetTransparencyConfigCbor.json
+++ b/specification/confidentialledger/data-plane/Microsoft.CodeTransparency/preview/2025-01-31-preview/examples/GetTransparencyConfigCbor.json
@@ -6,13 +6,22 @@
   },
   "responses": {
     "200": {
-      "body": ""
+      "headers": {
+        "Content-Type": "application/cbor"
+      },
+      "body": "{binary}"
     },
     "500": {
-      "body": ""
+      "headers": {
+        "Content-Type": "application/concise-problem-details+cbor"
+      },
+      "body": "{binary}"
     },
     "503": {
-      "body": ""
+      "headers": {
+        "Content-Type": "application/concise-problem-details+cbor"
+      },
+      "body": "{binary}"
     }
   }
 }
