--- a/specification/confidentialledger/Microsoft.CodeTransparency/examples/2025-01-31-preview/GetTransparencyConfigCbor.json
+++ b/specification/confidentialledger/Microsoft.CodeTransparency/examples/2025-01-31-preview/GetTransparencyConfigCbor.json
@@ -2,6 +2,7 @@
   "title": "GetTransparencyConfigCbor",
   "operationId": "GetTransparencyConfigCbor",
   "parameters": {
+    "api-version": "2025-01-31-preview",
     "accept": "application/cbor"
   },
   "responses": {
