Add experimentation child resource

--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2025-02-01-preview/examples/ConfigurationStoresDeleteExperimentation.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2025-02-01-preview/examples/ConfigurationStoresDeleteExperimentation.json
@@ -1,9 +1,10 @@
 {
   "parameters": {
-    "configStoreName": "contoso",
-    "location": "westus",
     "subscriptionId": "c80fb759-c965-4c6a-9110-9b2b2d038882",
-    "api-version": "2025-02-01-preview"
+    "resourceGroupName": "myResourceGroup",
+    "configStoreName": "contoso",
+    "api-version": "2025-02-01-preview",
+    "experimentationName": "experimentation"
   },
   "responses": {
     "200": {},
