--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2025-02-01-preview/examples/ConfigurationStoresGetExperimentation.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2025-02-01-preview/examples/ConfigurationStoresGetExperimentation.json
@@ -13,7 +13,7 @@
         "name": "experimentation",
         "type": "Microsoft.AppConfiguration/configurationStores/experimentations",
         "properties": {
-          "resourceGroupName": "AAC_MRG_myResourceGroup_contoso_eastus",
+          "managedResourceGroupName": "AAC_MRG_myResourceGroup_contoso_eastus",
           "onlineExperimentationWorkspaceResourceId": "/subscriptions/c80fb759-c965-4c6a-9110-9b2b2d038882/resourceGroups/AAC_MRG_myResourceGroup_contoso_eastus/providers/Microsoft.OnlineExperimentation/workspaces/aac-exp-39039517",
           "storageAccountResourceId": "/subscriptions/c80fb759-c965-4c6a-9110-9b2b2d038882/resourceGroups/AAC_MRG_myResourceGroup_contoso_eastus/providers/Microsoft.Storage/storageAccounts/aacexp39039517",
           "provisioningState": "Succeeded"
