--- a/specification/app/resource-manager/Microsoft.App/preview/2024-10-02-preview/ContainerAppsLabelHistory.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2024-10-02-preview/ContainerAppsLabelHistory.json
@@ -116,100 +116,157 @@
             "$ref": "./examples/LabelHistory_Get.json"
           }
         }
-      }
-    }
-  },
-  "definitions": {
-    "LabelHistory": {
-      "description": "Container App Label History.",
-      "type": "object",
-      "allOf": [
-        {
-          "$ref": "../../../../../common-types/resource-management/v5/types.json#/definitions/ProxyResource"
-        }
-      ],
-      "properties": {
-        "properties": {
-          "description": "Container App Label History resource specific properties",
-          "type": "object",
-          "properties": {
-            "records": {
-              "description": "List of label history records.",
-              "type": "array",
-              "readOnly": true,
-              "items": {
-                "$ref": "#/definitions/LabelHistoryRecordItem"
-              },
-              "x-ms-identifiers": [
-                "label"
-              ]
+      },
+      "delete": {
+        "tags": [
+          "ContainerAppsLabelHistory"
+        ],
+        "summary": "Delete the history of a label.",
+        "operationId": "ContainerAppsLabelHistory_DeleteLabelHistory",
+        "parameters": [
+          {
+            "$ref": "../../../../../common-types/resource-management/v5/types.json#/parameters/SubscriptionIdParameter"
+          },
+          {
+            "$ref": "../../../../../common-types/resource-management/v5/types.json#/parameters/ResourceGroupNameParameter"
+          },
+          {
+            "$ref": "./CommonDefinitions.json#/parameters/ContainerAppsNameParameter"
+          },
+          {
+            "name": "labelName",
+            "in": "path",
+            "description": "Name of the Container App label.",
+            "required": true,
+            "type": "string",
+            "pattern": "^[-\\w\\._\\(\\)]+$"
+          },
+          {
+            "$ref": "../../../../../common-types/resource-management/v5/types.json#/parameters/ApiVersionParameter"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Label history deleted successfully."
+          },
+          "409": {
+            "description": "Conflict."
+          },
+          "default": {
+            "description": "Common error response.",
+            "schema": {
+              "$ref": "./CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
+          }
+        },
+        "x-ms-examples": {
+          "Delete Container App's label history for a given label": {
+            "$ref": "./examples/LabelHistory_Delete.json"
+          }
+        }
+      }
+    },
+    "definitions": {
+      "LabelHistory": {
+        "description": "Container App Label History.",
+        "type": "object",
+        "allOf": [
+          {
+            "$ref": "../../../../../common-types/resource-management/v5/types.json#/definitions/ProxyResource"
+          }
+        ],
+        "properties": {
+          "properties": {
+            "description": "Container App Label History resource specific properties",
+            "type": "object",
+            "properties": {
+              "records": {
+                "description": "List of label history records.",
+                "type": "array",
+                "readOnly": true,
+                "items": {
+                  "$ref": "#/definitions/LabelHistoryRecordItem"
+                },
+                "x-ms-identifiers": [
+                  "label"
+                ]
+              }
+            }
+          }
+        },
+        "x-ms-client-flatten": true
+      },
+      "LabelHistoryRecordItem": {
+        "description": "Container App Label History Item resource specific properties",
+        "type": "object",
+        "properties": {
+          "revision": {
+            "description": "Container App revision name that label was applied to.",
+            "type": "string",
+            "readOnly": true
+          },
+          "start": {
+            "format": "date-time",
+            "description": "Timestamp describing when the label was applied to the revision.",
+            "type": "string",
+            "readOnly": true
+          },
+          "stop": {
+            "format": "date-time",
+            "description": "Timestamp describing when the label was removed from the revision. Only meaningful when the label is currently applied to the revision.",
+            "type": "string",
+            "readOnly": true
+          },
+          "status": {
+            "description": "Status of the label history record.",
+            "type": "string",
+            "enum": [
+              "Starting",
+              "Succeeded",
+              "Failed"
+            ],
+            "readOnly": true
           }
         }
       },
-      "x-ms-client-flatten": true
-    },
-    "LabelHistoryRecordItem": {
-      "description": "Container App Label History Item resource specific properties",
-      "type": "object",
-      "properties": {
-        "revision": {
-          "description": "Container App revision name that label was applied to.",
-          "type": "string",
-          "readOnly": true
-        },
-        "start": {
-          "format": "date-time",
-          "description": "Timestamp describing when the label was applied to the revision.",
-          "type": "string",
-          "readOnly": true
-        },
-        "stop": {
-          "format": "date-time",
-          "description": "Timestamp describing when the label was removed from the revision. Only meaningful when the label is currently applied to the revision.",
-          "type": "string",
-          "readOnly": true
-        }
-      }
-    },
-    "LabelHistoryCollection": {
-      "description": "Container App Label History collection ARM resource.",
-      "required": [
-        "value"
-      ],
-      "type": "object",
-      "properties": {
-        "value": {
-          "description": "Collection of resources.",
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/LabelHistory"
+      "LabelHistoryCollection": {
+        "description": "Container App Label History collection ARM resource.",
+        "required": [
+          "value"
+        ],
+        "type": "object",
+        "properties": {
+          "value": {
+            "description": "Collection of resources.",
+            "type": "array",
+            "items": {
+              "$ref": "#/definitions/LabelHistory"
+            }
+          },
+          "nextLink": {
+            "description": "Link to next page of resources.",
+            "type": "string",
+            "readOnly": true
           }
-        },
-        "nextLink": {
-          "description": "Link to next page of resources.",
-          "type": "string",
-          "readOnly": true
         }
       }
-    }
-  },
-  "securityDefinitions": {
-    "azure_auth": {
-      "type": "oauth2",
-      "description": "Azure Active Directory OAuth2 Flow",
-      "flow": "implicit",
-      "authorizationUrl": "https://login.microsoftonline.com/common/oauth2/authorize",
-      "scopes": {
-        "user_impersonation": "impersonate your user account"
+    },
+    "securityDefinitions": {
+      "azure_auth": {
+        "type": "oauth2",
+        "description": "Azure Active Directory OAuth2 Flow",
+        "flow": "implicit",
+        "authorizationUrl": "https://login.microsoftonline.com/common/oauth2/authorize",
+        "scopes": {
+          "user_impersonation": "impersonate your user account"
+        }
       }
-    }
-  },
-  "security": [
-    {
-      "azure_auth": [
-        "user_impersonation"
-      ]
-    }
-  ]
-}
+    },
+    "security": [
+      {
+        "azure_auth": [
+          "user_impersonation"
+        ]
+      }
+    ]
+  }
