--- a/specification/servicenetworking/ServiceNetworking.Management/tspconfig.yaml
+++ b/specification/servicenetworking/ServiceNetworking.Management/tspconfig.yaml
@@ -52,7 +52,7 @@ options:
     service-name: "Traffic Controller"
   "@azure-tools/typespec-csharp":
     flavor: azure
-    package-dir: "Azure.ResourceManager.IotOperations"
+    package-dir: "Azure.ResourceManager.ServiceNetworking"
     clear-output-folder: true
     use-write-core: true
     namespace: "{package-dir}"
