Fix api version connection type

--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2024-07-01-preview/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2024-07-01-preview/azure-ai-projects.json
@@ -435,7 +435,7 @@
               "AzureBlob",
               "AIServices",
               "CognitiveSearch",
-              "API Key"
+              "ApiKey"
             ],
             "x-ms-enum": {
               "name": "ConnectionType",
@@ -468,7 +468,7 @@
                 },
                 {
                   "name": "APIKey",
-                  "value": "API Key",
+                  "value": "ApiKey",
                   "description": "Generic connection that uses API Key authentication"
                 }
               ]
@@ -9000,7 +9000,7 @@
         "AzureBlob",
         "AIServices",
         "CognitiveSearch",
-        "API Key"
+        "ApiKey"
       ],
       "x-ms-enum": {
         "name": "ConnectionType",
@@ -9033,7 +9033,7 @@
           },
           {
             "name": "APIKey",
-            "value": "API Key",
+            "value": "ApiKey",
             "description": "Generic connection that uses API Key authentication"
           }
         ]
