Add support for URL citation, and use "agentId" instead of "assistantId" in client SDKs (wire protocol still uses "assistant_id") (#32718)

--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2024-07-01-preview/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2024-07-01-preview/azure-ai-projects.json
@@ -301,7 +301,7 @@
         }
       }
     },
-    "/assistants/{assistantId}": {
+    "/assistants/{agentId}": {
       "get": {
         "operationId": "Agents_GetAgent",
         "description": "Retrieves an existing agent.",
@@ -310,7 +310,7 @@
             "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
           },
           {
-            "name": "assistantId",
+            "name": "agentId",
             "in": "path",
             "description": "Identifier of the agent.",
             "required": true,
@@ -346,7 +346,7 @@
             "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
           },
           {
-            "$ref": "#/parameters/Agents.UpdateAgentOptions.assistantId"
+            "$ref": "#/parameters/Agents.UpdateAgentOptions.agentId"
           },
           {
             "name": "body",
@@ -386,7 +386,7 @@
             "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
           },
           {
-            "name": "assistantId",
+            "name": "agentId",
             "in": "path",
             "description": "Identifier of the agent.",
             "required": true,
@@ -434,7 +434,8 @@
               "Serverless",
               "AzureBlob",
               "AIServices",
-              "CognitiveSearch"
+              "CognitiveSearch",
+              "ApiKey"
             ],
             "x-ms-enum": {
               "name": "ConnectionType",
@@ -464,6 +465,11 @@
                   "name": "AzureAISearch",
                   "value": "CognitiveSearch",
                   "description": "Azure AI Search"
+                },
+                {
+                  "name": "APIKey",
+                  "value": "ApiKey",
+                  "description": "Generic connection that uses API Key authentication"
                 }
               ]
             }
@@ -4187,7 +4193,7 @@
         "assistant_id": {
           "type": "string",
           "description": "The ID of the agent for which the thread should be created.",
-          "x-ms-client-name": "assistantId"
+          "x-ms-client-name": "agentId"
         },
         "thread": {
           "$ref": "#/definitions/Agents.AgentThreadCreationOptions",
@@ -4353,7 +4359,7 @@
         "assistant_id": {
           "type": "string",
           "description": "The ID of the agent that should run the thread.",
-          "x-ms-client-name": "assistantId"
+          "x-ms-client-name": "agentId"
         },
         "model": {
           "type": "string",
@@ -5212,19 +5218,54 @@
         }
       }
     },
+    "Agents.MessageDeltaTextUrlCitationAnnotation": {
+      "type": "object",
+      "description": "A citation within the message that points to a specific URL associated with the message. Generated when the agent uses tools such as 'bing_grounding' to search the Internet.",
+      "properties": {
+        "url_citation": {
+          "$ref": "#/definitions/Agents.MessageDeltaTextUrlCitationDetails",
+          "description": "The details of the URL citation.",
+          "x-ms-client-name": "urlCitation"
+        },
+        "start_index": {
+          "type": "integer",
+          "format": "int32",
+          "description": "The first text index associated with this text annotation.",
+          "x-ms-client-name": "startIndex"
+        },
+        "end_index": {
+          "type": "integer",
+          "format": "int32",
+          "description": "The last text index associated with this text annotation.",
+          "x-ms-client-name": "endIndex"
+        }
+      },
+      "required": [
+        "url_citation"
+      ],
+      "allOf": [
+        {
+          "$ref": "#/definitions/Agents.MessageDeltaTextAnnotation"
+        }
+      ],
+      "x-ms-discriminator-value": "url_citation"
+    },
     "Agents.MessageDeltaTextUrlCitationDetails": {
       "type": "object",
-      "description": "A representation of the URL used for the text citation.",
+      "description": "A representation of a URL citation, as used in text thread message content.",
       "properties": {
         "url": {
           "type": "string",
-          "description": "The URL where the citation is from."
+          "description": "The URL associated with this citation."
         },
         "title": {
           "type": "string",
           "description": "The title of the URL."
         }
-      }
+      },
+      "required": [
+        "url"
+      ]
     },
     "Agents.MessageImageFileContent": {
       "type": "object",
@@ -5566,6 +5607,55 @@
       },
       "required": [
         "file_id"
+      ]
+    },
+    "Agents.MessageTextUrlCitationAnnotation": {
+      "type": "object",
+      "description": "A citation within the message that points to a specific URL associated with the message. Generated when the agent uses tools such as 'bing_grounding' to search the Internet.",
+      "properties": {
+        "url_citation": {
+          "$ref": "#/definitions/Agents.MessageTextUrlCitationDetails",
+          "description": "The details of the URL citation.",
+          "x-ms-client-name": "urlCitation"
+        },
+        "start_index": {
+          "type": "integer",
+          "format": "int32",
+          "description": "The first text index associated with this text annotation.",
+          "x-ms-client-name": "startIndex"
+        },
+        "end_index": {
+          "type": "integer",
+          "format": "int32",
+          "description": "The last text index associated with this text annotation.",
+          "x-ms-client-name": "endIndex"
+        }
+      },
+      "required": [
+        "url_citation"
+      ],
+      "allOf": [
+        {
+          "$ref": "#/definitions/Agents.MessageTextAnnotation"
+        }
+      ],
+      "x-ms-discriminator-value": "url_citation"
+    },
+    "Agents.MessageTextUrlCitationDetails": {
+      "type": "object",
+      "description": "A representation of a URL citation, as used in text thread message content.",
+      "properties": {
+        "url": {
+          "type": "string",
+          "description": "The URL associated with this citation."
+        },
+        "title": {
+          "type": "string",
+          "description": "The title of the URL."
+        }
+      },
+      "required": [
+        "url"
       ]
     },
     "Agents.MicrosoftFabricToolDefinition": {
@@ -6093,7 +6183,7 @@
         "assistant_id": {
           "type": "string",
           "description": "The ID of the agent associated with the run step.",
-          "x-ms-client-name": "assistantId"
+          "x-ms-client-name": "agentId"
         },
         "thread_id": {
           "type": "string",
@@ -7311,7 +7401,7 @@
           "type": "string",
           "description": "If applicable, the ID of the agent that authored this message.",
           "x-nullable": true,
-          "x-ms-client-name": "assistantId"
+          "x-ms-client-name": "agentId"
         },
         "run_id": {
           "type": "string",
@@ -7415,7 +7505,7 @@
         "assistant_id": {
           "type": "string",
           "description": "The ID of the agent associated with the thread this run was performed against.",
-          "x-ms-client-name": "assistantId"
+          "x-ms-client-name": "agentId"
         },
         "status": {
           "$ref": "#/definitions/Agents.RunStatus",
@@ -8909,7 +8999,8 @@
         "Serverless",
         "AzureBlob",
         "AIServices",
-        "CognitiveSearch"
+        "CognitiveSearch",
+        "ApiKey"
       ],
       "x-ms-enum": {
         "name": "ConnectionType",
@@ -8939,6 +9030,11 @@
             "name": "AzureAISearch",
             "value": "CognitiveSearch",
             "description": "Azure AI Search"
+          },
+          {
+            "name": "APIKey",
+            "value": "ApiKey",
+            "description": "Generic connection that uses API Key authentication"
           }
         ]
       }
@@ -9653,8 +9749,8 @@
     }
   },
   "parameters": {
-    "Agents.UpdateAgentOptions.assistantId": {
-      "name": "assistantId",
+    "Agents.UpdateAgentOptions.agentId": {
+      "name": "agentId",
       "in": "path",
       "description": "The ID of the agent to modify.",
       "required": true,
