--- a/.github/workflows/SDK-Suppressions-Label.yaml
+++ b/.github/workflows/SDK-Suppressions-Label.yaml
@@ -24,22 +24,21 @@ jobs:
       - name: Setup Node and install deps
         uses: ./.github/actions/setup-node-install-deps
 
-      - name: Get GitHub PullRequest Changed Files
-        shell: pwsh
+      - name: Get GitHub PullRequest Changed Suppression Files
         id: get-changedFiles
-        run: |
-          . eng/scripts/ChangedFiles-Functions.ps1
-          $changedFiles = @(Get-ChangedFiles)
-          $changedFilesArray = $changedFiles -split ' '
-          $yamlFilesArray = $changedFilesArray | Where-Object { $_ -match 'sdk-suppressions\.yaml$' }
-          $yamlFiles = $yamlFilesArray -join ' '
-          echo "PR Changed sdk-suppressions.yaml files: $yamlFiles"
-          Add-Content -Path $env:GITHUB_OUTPUT -Value "changedFiles=$yamlFiles"
+        uses: actions/github-script@v7
+        with:
+         result-encoding: string
+         script: |
+           const { getChangedSuppressionFiles } =
+             await import('${{ github.workspace }}/.github/workflows/src/changed-files.js');
+           return await getChangedSuppressionFiles({ github, context, core });
 
       - name: Get GitHub PullRequest Context
         uses: actions/github-script@v7
         id: fetch-pullRequest-context
         with:
+          result-encoding: string
           script: |
             const pr = context.payload.pull_request;
             if (!pr) {
@@ -47,13 +46,12 @@ jobs:
             }
             console.log("This action trigger by ", context.eventName);
             core.setOutput("prLabels", pr.labels.map(label => label.name));
-          result-encoding: string
 
       - name: Run Get suppressions label script
         id: run-suppressions-script
         env:
           OUTPUT_FILE: "output.json"
-          GITHUB_PULL_REQUEST_CHANGE_FILES: ${{ steps.get-changedFiles.outputs.changedFiles }}
+          GITHUB_PULL_REQUEST_CHANGE_FILES: ${{ steps.get-changedFiles.outputs.result }}
           GITHUB_PULL_REQUEST_LABELS: ${{ steps.fetch-pullRequest-context.outputs.prLabels }}
         run: |
           node eng/tools/sdk-suppressions/cmd/sdk-suppressions-label.js HEAD^ HEAD "$GITHUB_PULL_REQUEST_CHANGE_FILES" "$GITHUB_PULL_REQUEST_LABELS"
