--- a/.github/workflows/SDK-Suppressions-Label.yaml
+++ b/.github/workflows/SDK-Suppressions-Label.yaml
@@ -34,25 +34,25 @@ jobs:
              await import('${{ github.workspace }}/.github/workflows/src/changed-files.js');
            return await getChangedSuppressionFiles({ github, context, core });
 
-      # - name: Get GitHub PullRequest Context
-      #   uses: actions/github-script@v7
-      #   id: fetch-pullRequest-context
-      #   with:
-      #     result-encoding: string
-      #     script: |
-      #       const pr = context.payload.pull_request;
-      #       if (!pr) {
-      #         throw new Error("This workflow must run in the context of a pull request.");
-      #       }
-      #       console.log("This action trigger by ", context.eventName);
-      #       core.setOutput("prLabels", pr.labels.map(label => label.name));
+      - name: Get GitHub PullRequest Context
+        uses: actions/github-script@v7
+        id: fetch-pullRequest-context
+        with:
+          result-encoding: string
+          script: |
+            const pr = context.payload.pull_request;
+            if (!pr) {
+              throw new Error("This workflow must run in the context of a pull request.");
+            }
+            console.log("This action trigger by ", context.eventName);
+            core.setOutput("prLabels", pr.labels.map(label => label.name));
 
       - name: Run Get suppressions label script
         id: run-suppressions-script
         env:
           OUTPUT_FILE: "output.json"
           GITHUB_PULL_REQUEST_CHANGE_FILES: ${{ steps.get-changedFiles.outputs.result }}
-          GITHUB_PULL_REQUEST_LABELS: "[]"
+          GITHUB_PULL_REQUEST_LABELS: ${{ steps.fetch-pullRequest-context.outputs.prLabels }}
         run: |
           node eng/tools/sdk-suppressions/cmd/sdk-suppressions-label.js HEAD^ HEAD "$GITHUB_PULL_REQUEST_CHANGE_FILES" "$GITHUB_PULL_REQUEST_LABELS"
 
