--- a/.github/workflows/SDK-Suppressions-Label.yaml
+++ b/.github/workflows/SDK-Suppressions-Label.yaml
@@ -32,7 +32,7 @@ jobs:
          script: |
            const { getChangedSuppressionFiles } =
              await import('${{ github.workspace }}/.github/workflows/src/changed-files.js');
-           return await getChangedSuppressionFiles({ github, context, core });
+           return await getChangedSuppressionFiles(core);
 
       - name: Get GitHub PullRequest Context
         uses: actions/github-script@v7
