--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@azure-tools/typespec-autorest": "0.51.0",
     "@azure-tools/typespec-azure-core": "0.51.0",
     "@azure-tools/typespec-azure-portal-core": "0.51.0",
-    "@azure-tools/typespec-azure-resource-manager": "0.51.0",
+    "@azure-tools/typespec-azure-resource-manager": "https://artprodcus3.artifacts.visualstudio.com/A0fb41ef4-5012-48a9-bf39-4ee3de03ee35/29ec6040-b234-4e31-b139-33dc4287b756/_apis/artifact/cGlwZWxpbmVhcnRpZmFjdDovL2F6dXJlLXNkay9wcm9qZWN0SWQvMjllYzYwNDAtYjIzNC00ZTMxLWIxMzktMzNkYzQyODdiNzU2L2J1aWxkSWQvNDU4NzE4NS9hcnRpZmFjdE5hbWUvcGFja2FnZXM1/content?format=file&subPath=%2Fazure-tools-typespec-azure-resource-manager-0.52.0-pr-2250.20250222.2.tgz",
     "@azure-tools/typespec-azure-rulesets": "0.51.0",
     "@azure-tools/typespec-client-generator-cli": "0.15.3",
     "@azure-tools/typespec-client-generator-core": "0.51.1",
