--- a/.github/workflows/lintdiff.yaml
+++ b/.github/workflows/lintdiff.yaml
@@ -44,19 +44,14 @@ jobs:
           Get-Content ../changed-files.txt
         shell: pwsh
 
-      - run: |
-          pwd
-          ls -lh
-
       - name: Run LintDiff Before
         run: |
-          realpath ../../../before
-          realpath ../../../changed-files.txt
-          npm exec --no -- lint-diff --path ../../../before --changed-files-path ../../../changed-files.txt --out-file placeholder.txt
-        working-directory: eng/tools/lint-diff
-
-      - name: Run LintDiff After
-        run: |
-          npm exec --no -- lint-diff --path ../../../../after --changed-files-path ../../../../changed-files.txt --out-file placeholder.txt
-          # TODO: npm exec -- summarize-lint-diff 
-        working-directory: eng/tools/lint-diff
+          pwd
+          ls -lh
+          realpath before
+          realpath changed-files.txt
+          npm exec --no -- lint-diff \
+            --before before \
+            --after after \
+            --changed-files-path changed-files.txt \
+            --out-file placeholder.txt
