--- a/.github/workflows/lintdiff.yaml
+++ b/.github/workflows/lintdiff.yaml
@@ -7,7 +7,7 @@ permissions:
 
 jobs:
   lintdiff:
-    name: LintDiff (preview)
+    name: LintDiff (Preview)
     runs-on: ubuntu-24.04
 
     steps:
