--- a/eng/tools/lint-diff/package.json
+++ b/eng/tools/lint-diff/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@azure-tools/openapi-tools-common": "^1.2.2",
     "@azure/openapi-markdown": "^0.9.4",
+    "@microsoft.azure/openapi-validator": "2.2.3",
     "autorest": "3.6.1",
     "commonmark": "^0.31.2"
   },
