--- a/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/tspconfig.yaml
+++ b/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/tspconfig.yaml
@@ -9,6 +9,27 @@ options:
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/servicefabricmanagedclusters.json"
     examples-dir: "{project-root}/examples"
     arm-resource-flattening: true
+  "@azure-tools/typespec-python":
+    package-dir: "azure-mgmt-servicefabricmanagedclusters"
+    package-name: "{package-dir}"
+    generate-test: true
+    generate-sample: true
+    flavor: azure
+  "@azure-tools/typespec-csharp":
+    package-dir: "Azure.ResourceManager.ServiceFabricManagedClusters"
+    clear-output-folder: true
+    model-namespace: false
+    namespace: "{package-dir}"
+    flavor: azure
+  "@azure-tools/typespec-ts":
+    package-dir: "arm-servicefabricmanagedclusters"
+    packageDetails:
+      name: "@azure/arm-servicefabricmanagedclusters"
+    flavor: azure
+  "@azure-tools/typespec-go":
+    service-dir: "sdk/resourcemanager/servicefabricmanagedclusters"
+    package-dir: "armservicefabricmanagedclusters"
+    flavor: azure
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
