--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2025-02-01-preview/examples/ConfigurationStoresDeleteExperimentation.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2025-02-01-preview/examples/ConfigurationStoresDeleteExperimentation.json
@@ -4,7 +4,7 @@
     "resourceGroupName": "myResourceGroup",
     "configStoreName": "contoso",
     "api-version": "2025-02-01-preview",
-    "experimentationName": "experimentation"
+    "experimentationName": "Experimentation"
   },
   "responses": {
     "202": {
