--- a/specification/keyvault/Keyvault.Management/tspconfig.yaml
+++ b/specification/keyvault/Keyvault.Management/tspconfig.yaml
@@ -12,3 +12,6 @@ options:
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
+  disable:
+    "@azure-tools/typespec-azure-core/casing-style": "Check"
+    "@azure-tools/typespec-azure-resource-manager/arm-resource-provisioning-state": "Check"
