--- a/specification/security/resource-manager/Microsoft.Security/stable/2025-01-01/defenderForStorageSettings.json
+++ b/specification/security/resource-manager/Microsoft.Security/stable/2025-01-01/defenderForStorageSettings.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "Security Center",
     "description": "API spec for Microsoft.Security (Azure Security Center) resource provider",
-    "version": "2025-01-01"
+    "version": "2024-10-01-preview"
   },
   "host": "management.azure.com",
   "schemes": [
