Update description for premium sku

--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2024-06-01/appconfiguration.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2024-06-01/appconfiguration.json
@@ -1624,7 +1624,7 @@
         "revisionRetentionPeriodInSeconds": {
           "type": "integer",
           "format": "int64",
-          "description": "The amount of time in seconds to retain new key value revisions. Defaults to 604800 (7 days) for Free SKU stores and 2592000 (30 days) for Standard SKU stores."
+          "description": "The amount of time in seconds to retain new key value revisions. Defaults to 604800 (7 days) for Free SKU stores, 2592000 (30 days) for Standard SKU stores and 7776000 (90 days) for Premium SKU stores."
         },
         "enablePurgeProtection": {
           "type": "boolean",
@@ -1813,7 +1813,7 @@
         "revisionRetentionPeriodInSeconds": {
           "type": "integer",
           "format": "int64",
-          "description": "The amount of time in seconds to retain new key value revisions. Defaults to 604800 (7 days) for Free SKU stores and 2592000 (30 days) for Standard SKU stores."
+          "description": "The amount of time in seconds to retain new key value revisions. Defaults to 604800 (7 days) for Free SKU stores, 2592000 (30 days) for Standard SKU stores and 7776000 (90 days) for Premium SKU stores."
         }
       }
     },
