add url to list operation examples

--- a/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/examples/2024-11-01-preview/ApplicationListOperation_example.json
+++ b/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/examples/2024-11-01-preview/ApplicationListOperation_example.json
@@ -8,7 +8,7 @@
   "responses": {
     "200": {
       "body": {
-        "nextLink": "",
+        "nextLink": "http://examplelink.com",
         "value": [
           {
             "name": "myApp",
