--- a/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/examples/2024-11-01-preview/ApplicationTypeVersionListOperation_example.json
+++ b/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/examples/2024-11-01-preview/ApplicationTypeVersionListOperation_example.json
@@ -9,7 +9,7 @@
   "responses": {
     "200": {
       "body": {
-        "nextLink": "",
+        "nextLink": "http://examplelink.com",
         "value": [
           {
             "name": "1.0",
