--- a/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/preview/2024-11-01-preview/examples/ApplicationListOperation_example.json
+++ b/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/preview/2024-11-01-preview/examples/ApplicationListOperation_example.json
@@ -8,7 +8,7 @@
   "responses": {
     "200": {
       "body": {
-        "nextLink": "",
+        "nextLink": "http://examplelink.com",
         "value": [
           {
             "name": "myApp",
