--- a/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/StackHCI/preview/2025-02-01-preview/deploymentSettings.json
+++ b/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/StackHCI/preview/2025-02-01-preview/deploymentSettings.json
@@ -422,6 +422,10 @@
         "optionalServices": {
           "$ref": "#/definitions/OptionalServices",
           "description": "OptionalServices config to deploy AzureStackHCI Cluster."
+        },
+        "assemblyInfo": {
+          "$ref": "#/definitions/AssemblyInfo",
+          "description": "Assembly Package details for Validated Solution Recipe for AzureStackHCI Cluster"
         }
       }
     },
@@ -709,6 +713,52 @@
         "customLocation": {
           "type": "string",
           "description": "The name of custom location."
+        }
+      }
+    },
+    "AssemblyInfo": {
+      "type": "object",
+      "description": "Assembly Package details for Validated Solution Recipe for AzureStackHCI Cluster",
+      "properties": {
+        "packageVersion": {
+          "type": "string",
+          "description": "Assembly Package version for Validated Solution Recipe for AzureStackHCI Cluster",
+          "readOnly": true
+        },
+        "payload": {
+          "type": "array",
+          "description": "Payload properties for Validated Solution Recipe for AzureStackHCI Cluster",
+          "items": {
+            "$ref": "#/definitions/AssemblyInfoPayload"
+          },
+          "readOnly": true,
+          "x-ms-identifiers": []
+        }
+      }
+    },
+    "AssemblyInfoPayload": {
+      "type": "object",
+      "description": "Payload properties for Validated Solution Recipe for AzureStackHCI Cluster",
+      "properties": {
+        "identifier": {
+          "type": "string",
+          "description": "assembly identifier for Validated Solution Recipe for AzureStackHCI Cluster",
+          "readOnly": true
+        },
+        "hash": {
+          "type": "string",
+          "description": "Hash of assembly package for Validated Solution Recipe for AzureStackHCI Cluster",
+          "readOnly": true
+        },
+        "fileName": {
+          "type": "string",
+          "description": "File name of assembly package for Validated Solution Recipe for AzureStackHCI Cluster",
+          "readOnly": true
+        },
+        "url": {
+          "type": "string",
+          "description": "Url of assembly package for Validated Solution Recipe for AzureStackHCI Cluster",
+          "readOnly": true
         }
       }
     },
