--- a/package.json
+++ b/package.json
@@ -2,25 +2,25 @@
   "name": "azure-rest-api-specs",
   "devDependencies": {
     "@azure-tools/typespec-apiview": "0.5.0",
-    "@azure-tools/typespec-autorest": "0.51.0",
-    "@azure-tools/typespec-azure-core": "0.51.0",
-    "@azure-tools/typespec-azure-portal-core": "0.51.0",
-    "@azure-tools/typespec-azure-resource-manager": "0.51.0",
-    "@azure-tools/typespec-azure-rulesets": "0.51.0",
+    "@azure-tools/typespec-autorest": "file:../typespec-azure/packages/typespec-autorest",
+    "@azure-tools/typespec-azure-core": "file:../typespec-azure/packages/typespec-azure-core",
+    "@azure-tools/typespec-azure-portal-core": "file:../typespec-azure/packages/typespec-azure-portal-core",
+    "@azure-tools/typespec-azure-resource-manager": "file:../typespec-azure/packages/typespec-azure-resource-manager",
+    "@azure-tools/typespec-azure-rulesets": "file:../typespec-azure/packages/typespec-azure-rulesets",
     "@azure-tools/typespec-client-generator-cli": "0.15.3",
-    "@azure-tools/typespec-client-generator-core": "0.51.3",
+    "@azure-tools/typespec-client-generator-core": "file:../typespec-azure/packages/typespec-client-generator-core",
     "@azure-tools/typespec-liftr-base": "0.7.0",
     "@azure/avocado": "^0.9.1",
     "@autorest/openapi-to-typespec": "0.10.10",
-    "@typespec/compiler": "0.65.3",
-    "@typespec/http": "0.65.0",
-    "@typespec/openapi": "0.65.0",
-    "@typespec/openapi3": "0.65.0",
-    "@typespec/prettier-plugin-typespec": "0.65.0",
-    "@typespec/rest": "0.65.0",
-    "@typespec/streams": "0.65.0",
-    "@typespec/versioning": "0.65.0",
-    "@typespec/xml": "0.65.0",
+    "@typespec/compiler": "file:../typespec-azure/core/packages/compiler",
+    "@typespec/http": "file:../typespec-azure/core/packages/http",
+    "@typespec/openapi": "file:../typespec-azure/core/packages/openapi",
+    "@typespec/openapi3": "file:../typespec-azure/core/packages/openapi3",
+    "@typespec/prettier-plugin-typespec": "file:../typespec-azure/core/packages/prettier-plugin-typespec",
+    "@typespec/rest": "file:../typespec-azure/core/packages/rest",
+    "@typespec/streams": "file:../typespec-azure/core/packages/streams",
+    "@typespec/versioning": "file:../typespec-azure/core/packages/versioning",
+    "@typespec/xml": "file:../typespec-azure/core/packages/xml",
     "azure-rest-api-specs-eng-tools": "file:eng/tools",
     "oav": "^3.5.1",
     "prettier": "~3.3.3",
