--- a/eng/tools/lint-diff/package.json
+++ b/eng/tools/lint-diff/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/node": "^18.19.31",
     "@vitest/coverage-v8": "^3.0.2",
+    "execa": "^9.5.2",
     "typescript": "~5.6.2",
     "vitest": "^3.0.2"
   }
