--- a/.github/workflows/lintdiff-test.yaml
+++ b/.github/workflows/lintdiff-test.yaml
@@ -29,6 +29,7 @@ jobs:
         with:
           # TODO: Sparse checkout is probably too sparse
           sparse-checkout: |
+            .github/
             eng/tools/lint-diff
             eng/tools/package.json
             package.json
