checkout eng/tools/

--- a/.github/workflows/lintdiff-test.yaml
+++ b/.github/workflows/lintdiff-test.yaml
@@ -30,8 +30,7 @@ jobs:
           # TODO: Sparse checkout is probably too sparse
           sparse-checkout: |
             .github/
-            eng/tools/lint-diff
-            eng/tools/package.json
+            eng/tools/
             package.json
             package-lock.json
 
