spellcheck omit tsp files, revert managedcluster to trackedresource

--- a/specification/servicefabricmanagedclusters/cspell.yaml
+++ b/specification/servicefabricmanagedclusters/cspell.yaml
@@ -17,6 +17,7 @@ words:
 overrides:
   - filename: >-
       **/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/**/*.json
+      **/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/**/*.tsp
     words:
       - regionname
       - sfmc
