spellcheck omission for tsp files

--- a/specification/servicefabricmanagedclusters/cspell.yaml
+++ b/specification/servicefabricmanagedclusters/cspell.yaml
@@ -17,6 +17,12 @@ words:
 overrides:
   - filename: >-
       **/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/**/*.json
+    words:
+      - regionname
+      - sfmc
+      - sfmc's
+      - sfmcdomain
+  - filename: >-
       **/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/**/*.tsp
     words:
       - regionname
