--- a/specification/trafficmanager/resource-manager/Microsoft.Network/preview/2024-04-01-preview/examples/Endpoint-PUT-External-WithSubnetMapping.json
+++ b/specification/trafficmanager/resource-manager/Microsoft.Network/preview/2024-04-01-preview/examples/Endpoint-PUT-External-WithSubnetMapping.json
@@ -5,7 +5,7 @@
     "profileName": "azuresdkfornetautoresttrafficmanager8224",
     "endpointType": "ExternalEndpoints",
     "endpointName": "My%20external%20endpoint",
-    "api-version": "2022-04-01",
+    "api-version": "2024-04-01-preview",
     "parameters": {
       "name": "My external endpoint",
       "type": "Microsoft.network/TrafficManagerProfiles/ExternalEndpoints",
