--- a/specification/trafficmanager/resource-manager/Microsoft.Network/preview/2024-04-01-preview/examples/Profile-PATCH-MonitorConfig.json
+++ b/specification/trafficmanager/resource-manager/Microsoft.Network/preview/2024-04-01-preview/examples/Profile-PATCH-MonitorConfig.json
@@ -3,7 +3,7 @@
     "subscriptionId": "{subscription-id}",
     "resourceGroupName": "azuresdkfornetautoresttrafficmanager2583",
     "profileName": "azuresdkfornetautoresttrafficmanager6192",
-    "api-version": "2022-04-01",
+    "api-version": "2024-04-01-preview",
     "parameters": {
       "properties": {
         "monitorConfig": {
